--- a/config.toml
+++ b/config.toml
@@ -8,15 +8,15 @@ summarylength = 25
 [menu]
   # Navbar Menus
   [[menu.nav]]
-    name    = "Home"
+    name    = "Rumah"
     url     = ""
     weight  = 1
   [[menu.nav]]
-    name    = "About"
+    name    = "Tentang"
     url     = "about"
     weight  = 2
   [[menu.nav]]
-    name    = "Portfolio"
+    name    = "Resume"
     url     = "portfolio"
     weight  = 3
   [[menu.nav]]
@@ -24,7 +24,7 @@ summarylength = 25
     url     = "blog"
     weight  = 4
   [[menu.nav]]
-    name    = "Get in touch"
+    name    = "Kontak Saya"
     url     = "contact"
     weight  = 5
 
